New changes, css and html

--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="" />
     <title>Michelle - portfolio</title>
+
+    <!-- font awersome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- font awersome -->
+    
+    
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
         rel="stylesheet" />
-    <link href="https://harnishdesign.net/demo/react/simone/demo/static/css/main.f0b54b11.css" rel="stylesheet" />
+
+    <link href="assets/common/css/main.css" rel="stylesheet" />
+
+    <link href="assets/common/css/style.css" rel="stylesheet" />
+
     <style>
         .Typewriter__cursor {
             -webkit-animation: Typewriter-cursor 1s infinite;
