--- a/index.html
+++ b/index.html
@@ -650,15 +650,15 @@
           <div class="modal fade" id="modalProject" tabindex="-1" aria-labelledby="modalProjectLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl shadow-lg">
               <div class="modal-content bg-dark-2">
-                <div class="modal-header border-0">
-                  <h1 class="modal-title fs-5 text-primary" id="modalProjectLabel"></h1>
+                <div class="modal-header border-0 pb-0">
+                  <h1 class="modal-title fs-5 fw-bold text-primary" id="modalProjectLabel"></h1>
                   <button type="button" class="btn-close custom-img-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-0">
                   <div class="p-3">
                     <div class="row">
-                      <div class="col-md-6">
-                        <div class="bg-white  rounded p-4 mb-3 bg-dark" id="modal-project-info">
+                      <div class="col-lg-6 mb-lg-0 mb-3">
+                        <div class="bg-white h-100 rounded p-4 bg-dark" id="modal-project-info">
                           <div class="placeholder-glow">
                             <span class="placeholder col-6 mb-3"></span>
                             <span class="placeholder col-12 mb-2"></span>
@@ -667,10 +667,10 @@
                             <span class="placeholder col-12 mb-2"></span>
                           </div>
                         </div>
-                        <div class="bg-white  rounded p-4 bg-dark" id="modal-project-tools" style="display:none"></div>
+                        <div class="bg-white rounded p-4 bg-dark" id="modal-project-tools" style="display:none"></div>
                       </div>
-                      <div class="col-md-6">
-                        <div class="bg-white  rounded p-4 bg-dark" id="modal-project-details">
+                      <div class="col-lg-6">
+                        <div class="bg-white h-100 rounded p-4 bg-dark" id="modal-project-details">
                           <div class="placeholder-glow">
                             <span class="placeholder col-6 mb-3"></span>
                             <br>
