actualización de contect de portafolio

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <div class="col-lg-7 col-xl-8 text-center text-lg-start">
                     <h2 class="text-7 fw-bold mb-3 text-white">I'm <span class="text-primary">Michelle Adrianzen,</span>
                     </h2>
-                    <p class="text-white-50"> As a versatile designer with 8 years of experience, I specialize in visual communication, digital marketing, and web design. My expertise lies in creating impactful and innovative design solutions tailored to the unique needs of each client. With a strong background in delivering high-quality, customized designs, I have collaborated with a diverse range of clients across various industries worldwide. I am dedicated to continuously enhancing my skills and knowledge to provide innovative solutions that stand out in a competitive landscape. </p>
+                    <p class="text-white-50"> With 8 years of experience as a designer, I’ve had the opportunity to dive into everything from visual communication to digital marketing and web design. My focus is always on crafting designs that not only look great but also meet the unique needs of each client. I’ve been lucky enough to work with clients from all kinds of industries around the world, and I take pride in delivering high-quality, tailored solutions that make an impact. I’m always looking to learn and grow, so I can keep offering fresh, innovative ideas that help my clients stand out. </p>
                   </div>
                   <div class="col-lg-5 col-xl-4">
                     <div class="ps-lg-4">
@@ -251,7 +251,7 @@
                       <p class="badge bg-primary text-2 fw-400">2018 - 2019</p>
                       <h3 class="text-5 text-white">Advertising Graphic Design</h3>
                       <p class="text-primary">UCAL University</p>
-                      <p class="mb-0 text-white-50">Pursued a two-year continuation program to earn my Bachelor's Degree, during which I expanded my knowledge through challenging projects and acquired new skills.</p>
+                      <p class="mb-0 text-white-50">I pursued a two-year continuation program to earn my Bachelor's Degree, during which I expanded my knowledge through challenging projects and acquired new skills.</p>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -259,7 +259,7 @@
                       <p class="badge bg-primary text-2 fw-400">2014 - 2017</p>
                       <h3 class="text-5 text-white">Direction and Graphic Design</h3>
                       <p class="text-primary">Toulouse Lautrec College</p>
-                      <p class="mb-0 text-white-50">Completed a four-year program that enhanced my creativity, developed my visual and software skills, and fueled my passion for visual communication.</p>
+                      <p class="mb-0 text-white-50">I completed a four-year program that enhanced my creativity, developed my visual and software skills, and fueled my passion for visual communication.</p>
                     </div>
                   </div>
                   <div class="col-md-12 mt-4">
@@ -271,7 +271,8 @@
                       <ul class="text-white-50">
                         <li> Created a wide variety of visual content, from web and social media graphics to custom illustrations for clients across the globe, delivering high-quality visual content tailored to diverse client needs. </li>
                         <li>Collaborated with other designers on complex projects, fostering a team-oriented approach to achieve cohesive and innovative designs.</li>
-                        <li>Communicated effectively with clients to understand their briefs and project goals. Provided design concepts for feedback and managed revisions to ensure satisfaction</li>
+                        <li>Communicated effectively with clients to understand their briefs and project goals.</li>
+                        <li>Provided design concepts for feedback and managed revisions to ensure satisfaction</li>
                         <li>Developed effective time management skills, balancing multiple projects simultaneously while maintaining a high standard of work.</li>
                       </ul>
                     </div>
@@ -458,6 +459,17 @@
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
                             </li>
+                            <li>
+                              <span class="text-light font-weight-600 me-2">Figma:</span>
+                              <a href="https://www.figma.com/proto/nLWfCYl5j2s23rpkwRxtZt/Alma-Ceremony-Designs?page-id=0%3A1&node-id=2-49&node-type=frame&viewport=400%2C450%2C0.06&t=vcUzlxzR4H0ya8sw-1&scaling=scale-down-width&content-scaling=fixed&hide-ui=1" target="_blank" class="me-2">
+                                Retreats
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                              <a href="https://www.figma.com/proto/nLWfCYl5j2s23rpkwRxtZt/Alma-Ceremony-Designs?page-id=0%3A1&node-id=2-648&node-type=frame&viewport=400%2C450%2C0.06&t=vcUzlxzR4H0ya8sw-1&scaling=scale-down-width&content-scaling=fixed&hide-ui=1" target="_blank">
+                                About Us
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            </a>
+                            </li>
                           </ul>
                         </div>
                         <!-- project details -->
@@ -631,8 +643,7 @@
                         <!-- información -->
                         <div class="project-info">
                           <h3 class="text-5 text-white">Project Info:</h3>
-                          <p class="mb-0 text-white-50"> I created a series of social media designs for Frenchie’s, a brand known for its vegan, healthy desserts. The designs emphasize a warm, organic feel with neutral colors that highlight the natural beauty of the desserts. Each piece is crafted to resonate with Frenchie’s audience, promoting both their delicious offerings and their healthy, plant-based philosophy.
-                          </p>
+                          <p class="mb-0 text-white-50"> I created a series of social media designs for Frenchie’s, a brand known for its vegan, healthy desserts. The designs emphasize a warm, organic feel with neutral colors that highlight the natural beauty of the desserts. Each piece is crafted to resonate with Frenchie’s audience, promoting both their delicious offerings and their healthy, plant-based philosophy.</p>
                         </div>
                         <!-- información -->
                         <!-- project details -->
@@ -711,7 +722,12 @@
                                 Visit Web
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
+                              <a href="https://www.sandhillhemp.com/" target="_blank" class="me-2">
+                                Figma
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>  
                             </li>
+                            
                           </ul>
                         </div>
                         <!-- project details -->
@@ -813,6 +829,10 @@
                                 Visit Web
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
+                                <a href="https://www.figma.com/proto/IOkTV1ETOWVvbH9hJvOQIp/MusicalAmbassadors?page-id=0%3A1&node-id=1-10&node-type=canvas&viewport=526%2C365%2C0.2&t=HR17qrIS8l86rKtj-1&scaling=scale-down-width&content-scaling=fixed&hide-ui=1" target="_blank" class="me-2">
+                                  Figma
+                                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                  </a>
                             </li>
                           </ul>
                         </div>
@@ -861,7 +881,14 @@
                               <img src="assets/common/images/elementos-web/icon_ps.png" alt="Photoshop" title="Photoshop">
                             </li>
                             <li>
-                              <span class="text-light font-weight-600 me-2">Date:</span>November, 2022
+                              <span class="text-light font-weight-600 me-2">Date:</span>February, 2023
+                            </li>
+                            <li>
+                              <span class="text-light font-weight-600 me-2">URL:</span>
+                              <a href="https://www.figma.com/proto/oWdcpLbve3U9jophkbwSVn/JLWood?page-id=0%3A1&node-id=101-361&scaling=scale-down-width&content-scaling=fixed&t=2LIOjGDSQXvQ4h7G-1&hide-ui=1" target="_blank" class="me-2">
+                                Figma
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
                             </li>
                           </ul>
                         </div>
@@ -909,16 +936,16 @@
                               <img src="assets/common/images/elementos-web/icon_figma.png" alt="figma" title="figma">
                               <img src="assets/common/images/elementos-web/icon_ps.png" alt="photoshop" title="Photoshop">
                             <li>
-                              <span class="text-light font-weight-600 me-2">Date:</span>May, 2024
+                              <span class="text-light font-weight-600 me-2">Date:</span>November, 2022
                             </li>
                             <li>
-                              <span class="text-light font-weight-600 me-2">URL:</span>
-                              <a href="https://almaceremony.com/retreats/" target="_blank" class="me-2">
-                                Retreats Web
+                              <span class="text-light font-weight-600 me-2">Figma:</span>
+                              <a href="https://www.figma.com/proto/kC0hfaSSiJ1bKiw3V8Qm0i/CrownJewel-About?page-id=0%3A1&node-id=1-2&node-type=frame&viewport=437%2C247%2C0.1&t=4z4nvg6QFylBrWOY-1&scaling=scale-down-width&content-scaling=fixed&hide-ui=1" target="_blank" class="me-2">
+                                About
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
-                              <a href="https://almaceremony.com/about-us/" target="_blank">
-                                About Us Web
+                              <a href="https://www.figma.com/proto/5n4fijTCQEUnItFwAabHjW/Contact-Us?page-id=0%3A1&node-id=1-2&node-type=canvas&viewport=273%2C132%2C0.18&t=1NXrxbYst5FDf8j0-1&scaling=scale-down-width&content-scaling=fixed&hide-ui=1" target="_blank">
+                                Contact Us
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </a>
                             </li>
