--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <div class="col-lg-7 col-xl-8 text-center text-lg-start">
                     <h2 class="text-7 fw-bold mb-3 text-white">I'm <span class="text-primary">Michelle Adrianzen,</span>
                     </h2>
-                    <p class="text-white-50"> With 8 years of experience as a designer, I’ve had the opportunity to dive into everything from visual communication to digital marketing and web design. My focus is always on crafting designs that not only look great but also meet the unique needs of each client. I’ve been lucky enough to work with clients from all kinds of industries around the world, and I take pride in delivering high-quality, tailored solutions that make an impact. I’m always looking to learn and grow, so I can keep offering fresh, innovative ideas that help my clients stand out. </p>
+                    <p class="text-white-50"> I'm an experienced and versatile graphic and web designer with 8+ years of experience, specializing in the creation of engaging web designs, social media ads, email templates, print media, branding, custom illustrations and Amazon content. I’ve been lucky enough to work with clients from all kinds of industries around the world, and I take pride in delivering high-quality, tailored solutions that make an impact. I’m always looking to learn and grow, so I can keep offering fresh, innovative ideas that help my clients stand out. </p>
                   </div>
                   <div class="col-lg-5 col-xl-4">
                     <div class="ps-lg-4">
@@ -156,6 +156,10 @@
                         <li>
                           <span class="fw-bold me-2">Email:</span>
                           <a href="mailto:chat@simone.com">michelle.adrianzen@gmail.com</a>
+                        </li>
+                        <li>
+                          <span class="fw-bold me-2">Linkedin:</span>
+                          <a href="mailto:chat@simone.com">/michelle-adrianzen</a>
                         </li>
                         <li class="border-0">
                           <span class="fw-bold me-2">From:</span>Lima, Perú
@@ -269,7 +273,7 @@
                       <h3 class="text-5 text-white">Graphic Designer</h3>
                       <p class="text-primary">NoLimit Creatives</p>
                       <ul class="text-white-50">
-                        <li> Created a wide variety of visual content, from web and social media graphics to custom illustrations for clients across the globe, delivering high-quality visual content tailored to diverse client needs. </li>
+                        <li>Created a wide variety of visual content, from web and social media graphics to email templates and packaging designs for clients across the globe, delivering high-quality visual content tailored to diverse client needs.</li>
                         <li>Collaborated with other designers on complex projects, fostering a team-oriented approach to achieve cohesive and innovative designs.</li>
                         <li>Communicated effectively with clients to understand their briefs and project goals.</li>
                         <li>Provided design concepts for feedback and managed revisions to ensure satisfaction</li>
