--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <div class="col-lg-7 col-xl-8 text-center text-lg-start">
                     <h2 class="text-7 fw-bold mb-3 text-white">I'm <span class="text-primary">Michelle Adrianzen,</span>
                     </h2>
-                    <p class="text-white-50"> I'm an experienced and versatile graphic and web designer with 8+ years of experience, specializing in the creation of engaging web designs, social media ads, email templates, print media, branding, custom illustrations and Amazon content. I’ve been lucky enough to work with clients from all kinds of industries around the world, and I take pride in delivering high-quality, tailored solutions that make an impact.</p>
+                    <p class="text-white-50"> I'm an experienced and versatile graphic and web designer with 8+ years of experience, specializing in the creation of engaging web designs, social media ads, email templates, print media, branding, custom illustrations and Amazon content. I’ve been lucky enough to work with clients from all kinds of industries around the world, and I take pride in delivering high-quality, tailored solutions that make an impact and help my clients stand out. </p>
                   </div>
                   <div class="col-lg-5 col-xl-4">
                     <div class="ps-lg-4">
