--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <section id="services" class="section bg-dark-2">
               <div class="container px-lg-5">
                 <div class="position-relative d-flex text-center mb-5">
-                  <h2 class="text-24 text-uppercase fw-bold w-100 mb-0 text-white-50 opacity-1">Services </h2>
+                  <h2 class="text-24 text-uppercase fw-bold w-100 mb-0 text-white-50 opacity-1">Knowledge </h2>
                   <p class="text-9 fw-bold position-absolute w-100 align-self-center lh-base mb-0 text-white"> What I Do <span class="heading-separator-line border-bottom border-3 border-primary d-block mx-auto"></span>
                   </p>
                 </div>
