--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   <h1 class="text-5 text-white text-center mb-0 d-lg-block"></h1>
                 </a>
                 <div id="header-nav" class="collapse navbar-collapse w-100 my-lg-auto">
-                  <ul class="navbar-nav text-lg-center my-lg-auto py-lg-3">
+                  <ul class="navbar-nav text-lg-center  py-lg-3">
                     <li class="nav-item">
                       <a class="nav-link active" href="#home">Home</a>
                     </li>
@@ -125,7 +125,7 @@
                           </div>
                         </h2>
                         <p class="text-5 text-light mb-4">Graphic & Web Designer.</p>
-                        <a href="#" download="" class="btn btn-primary rounded-pill">Download CV</a>
+                        <a href="#" download="" class="btn btn-primary rounded-pill">Download Resume <i class="fas fa-download ms-2"></i></a>
                       </div>
                     </div>
                   </div>
@@ -339,7 +339,7 @@
                   </div>
                 </div>
                 <div class="text-center mt-5">
-                  <a class="btn btn-outline-secondary rounded-pill shadow-none" href="#" download=""> Download CV <span class="ms-1">
+                  <a class="btn btn-outline-secondary rounded-pill shadow-none" href="#" download=""> Download Resume <span class="ms-1">
                       <i class="fas fa-download"></i>
                     </span>
                   </a>
