--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                       <ul class="list-style-2 list-style-light text-light">
                         <li>
                           <span class="fw-bold me-2">Email:</span>
-                          <a href="mailto:chat@simone.com">michelle.adrianzen@gmail.com</a>
+                          <a href="mailto:michelle.adrianzen@gmail.com">michelle.adrianzen@gmail.com</a>
                         </li>
                         <li>
                           <span class="fw-bold me-2">Linkedin:</span>
