--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                           </div>
                         </h2>
                         <p class="text-5 text-light mb-4">Graphic & Web Designer.</p>
-                        <a href="#" download="" class="btn btn-primary rounded-pill">Download Resume <i class="fas fa-download ms-2"></i></a>
+                        <a href="assets/common/documents/Michelle-Adrianzen-Resume.pdf" target="_blank" class="btn btn-primary rounded-pill">See Resume<i class="ms-2 fa-solid fa-user"></i></a>
                       </div>
                     </div>
                   </div>
@@ -339,8 +339,8 @@
                   </div>
                 </div>
                 <div class="text-center mt-5">
-                  <a class="btn btn-outline-secondary rounded-pill shadow-none" href="#" download=""> Download Resume <span class="ms-1">
-                      <i class="fas fa-download"></i>
+                  <a class="btn btn-outline-secondary rounded-pill shadow-none" href="assets/common/documents/Michelle-Adrianzen-Resume.pdf" target="_blank"> See Resume <span class="ms-1">
+                      <i class="ms-2 fa-solid fa-user"></i>
                     </span>
                   </a>
                 </div>
