updated experience text

--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
                   <div class="col-md-12 mt-4">
                     <h2 class="text-6 fw-bold mb-4 text-white">My Experience</h2>
                     <div class="bg-white rounded p-4 mb-4 bg-dark">
-                      <p class="badge bg-primary text-2 fw-400">2020 - 2024</p>
+                      <p class="badge bg-primary text-2 fw-400">Dec 2020 - Mar 2024</p>
                       <h3 class="text-5 text-white">Graphic Designer</h3>
                       <p class="text-primary">NoLimit Creatives</p>
                       <ul class="text-white-50">
-                        <li>Created a wide variety of visual content, from web and social media graphics to email templates and packaging designs for clients across the globe, delivering high-quality visual content tailored to diverse client needs.</li>
+                        <li>Created a wide variety of visual content, from web and social media graphics to email templates and packaging designs for global clients in industries such as healthcare, real estate, beauty, and retail, delivering high-quality visuals tailored to diverse needs.</li>
                         <li>Collaborated with other designers on complex projects, fostering a team-oriented approach to achieve cohesive and innovative designs.</li>
                         <li>Communicated effectively with clients to understand their briefs and project goals.</li>
                         <li>Provided design concepts for feedback and managed revisions to ensure satisfaction</li>
@@ -281,7 +281,7 @@
                       </ul>
                     </div>
                     <div class="bg-white rounded p-4 mb-4 bg-dark">
-                      <p class="badge bg-primary text-2 fw-400">2019 - 2020</p>
+                      <p class="badge bg-primary text-2 fw-400">Feb 2019 - May 2020</p>
                       <h3 class="text-5 text-white">Graphic Designer</h3>
                       <p class="text-primary">JCDecaux</p>
                       <ul class="text-white-50">
