--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                                 Visit Web
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>
-                              <a href="https://www.sandhillhemp.com/" target="_blank" class="me-2">
+                              <a href="https://shorturl.at/LE3cX" target="_blank" class="me-2">
                                 Figma
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                 </a>  
