color change bg

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               </div>
             </section>
             
-            <section id="portfolio" class="section bg-dark-2">
+            <section id="portfolio" class="section bg-dark">
               <div class="container px-lg-5">
                 <div class="position-relative d-flex text-center mb-5">
                   <h2 class="text-24 text-uppercase fw-bold w-100 mb-0 text-muted opacity-1">Portfolio</h2>
