--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@
           opacity: 0;
         }
       }
+      .menu-morcilla li:first-child::before
+      {
+        display: none;
+      }
+      .menu-morcilla li::before
+      {
+        content: "";
+        width: 100px;
+        opacity: .5;
+        height: 1px;
+        display: inline-block;
+        background-color: gray;
+        margin: auto;
+      }
+
+      @media (max-width: 991px) {
+        .menu-morcilla li::before
+        {
+          display: none;
+        }
+      }
     </style>
   </head>
   <body>
@@ -74,15 +95,15 @@
         <div id="main-wrapper">
           <header id="header" class="sticky-top">
             <nav class="primary-menu navbar navbar-expand-lg navbar-dark bg-dark border-bottom-0">
-              <div class="container-fluid position-relative h-100 flex-lg-column ps-3 px-lg-3 pt-lg-3 pb-lg-2">
-                <a class="mb-lg-auto mt-lg-4">
+              <div class="container-fluid justify-content-center align-items-end position-relative h-100 flex-column ps-3 px-lg-3 pt-lg-3 pb-lg-2">
+                <a class="pb-lg-5 pb-0 w-100 text-center">
                   <span class="p-2 mb-lg-1 d-none d-lg-inline-block">
                     <img class="d-block" src="assets/common/images/profile.png" style="width: 100%;max-width: 170px;" title="I'm Michelle" alt="profile" />
                   </span>
                   <h1 class="text-5 text-white text-center mb-0 d-lg-block"></h1>
                 </a>
-                <div id="header-nav" class="collapse navbar-collapse w-100 my-lg-auto">
-                  <ul class="navbar-nav text-lg-center  py-lg-3">
+                <div id="header-nav" class="collapse navbar-collapse w-100" style="flex-grow: initial;">
+                  <ul class="navbar-nav text-lg-center py-lg-3 menu-morcilla">
                     <li class="nav-item">
                       <a class="nav-link active" href="#home">Home</a>
                     </li>
@@ -114,6 +135,7 @@
                   <div class="container my-auto">
                     <div class="row">
                       <div class="col-12 text-center">
+                        <img class="d-lg-none d-inline-block mb-4" src="assets/common/images/profile.png" style="width: 100%;max-width: 170px;" title="I'm Michelle" alt="profile">
                         <p class="text-7 fw-500 text-white mb-2 mb-md-3">Welcome</p>
                         <h2 class="text-16 fw-bold text-white mb-2 mb-md-3">
                           <div class="Typewriter" data-testid="typewriter-wrapper">
