--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         position: absolute;
         left: 0;
         top: 50%;
-        width: 36px;
-        height: 36px;
+        width: auto;
+        height: 40px;
         left: 15px;
         transform: translate(0, -50%);
         display: none;
@@ -110,7 +110,7 @@
           <header id="header" class="sticky-top">
             <nav class="primary-menu navbar navbar-expand-lg navbar-dark bg-dark border-bottom-0">
               <div class="container-fluid justify-content-center align-items-end position-relative h-100 flex-column ps-3 px-lg-3 pt-lg-3 pb-lg-2">
-                <img src="assets/common/images/iso.png" alt="iso" class="logo-iso-mobile">
+                <img src="assets/common/images/logo-horizontal.png" alt="iso" class="logo-iso-mobile">
                 <a class="pb-lg-5 pb-0 w-100 text-center">
                   <span class="p-2 mb-lg-1 d-none d-lg-inline-block">
                     <img class="d-block" src="assets/common/images/profile.png" style="width: 100%;max-width: 170px;" title="I'm Michelle" alt="profile" />
