--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                   </p>
                 </div>
                 <div class="row">
-                  <div class="col-lg-11 mx-auto">
-                    <div class="row">
+                  <div class="col-lg-12">
+                    <div class="row gx-5">
                       <div class="col-md-6">
                         <div class="featured-box style-3 mb-5">
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1 p-1">
@@ -270,8 +270,79 @@
                     </div>
                   </div>
                 </div>
+                <div class="container">
+                  <h2 class="text-9 fw-bold mt-5  text-white text-center">My Skills</h2> <span class="heading-separator-line border-bottom border-3 border-primary d-block mx-auto mb-5"></span>
+                    <div class="row gx-5 pt-4">
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">Adobe Photoshop <span class="float-end">95%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 95%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">Adobe Illustrator <span class="float-end">95%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 95%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">Figma <span class="float-end">85%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 85%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">Adobe Premiere <span class="float-end">70%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 70%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">Adobe After Effects <span class="float-end">60%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 60%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">Adobe InDesign <span class="float-end">95%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 95%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">HTML5<span class="float-end">60%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 60%;"></div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="fw-500 text-start mb-2 text-light">CSS<span class="float-end">60%</span>
+                        </p>
+                        <div class="progress progress-sm mb-4 bg-dark">
+                          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                            style="width: 60%;"></div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
               </div>
             </section>
+
+            
             
             <section id="portfolio" class="section bg-dark-1">
               <div class="container px-lg-5">
