--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
           <script>
             document.addEventListener("DOMContentLoaded", function() {
               const typewriterElement = document.getElementById("typewriter-text");
-              const phrases = ["I'm Michelle.", "I'm a Graphic Designer.", "I'm a Web Designer'."];
+              const phrases = ["I'm Michelle.", "I'm a Web Designer", "I'm a Digital Design Specialist"];
               let currentPhraseIndex = 0;
               let currentLetterIndex = 0;
               const typingSpeed = 100; // Velocidad de escritura en milisegundos
