--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <span class="Typewriter__cursor">|</span>
                           </div>
                         </h2>
-                        <p class="text-5 text-light mb-4">Graphic & Web Designer.</p>
+                        <p class="text-5 text-light mb-4">Web Designer & Digital Design Specialist</p>
                         <a href="assets/common/documents/Michelle-Adrianzen-Resume.pdf" target="_blank" class="btn btn-primary rounded-pill">See Resume<i class="ms-2 fa-solid fa-user"></i></a>
                       </div>
                     </div>
@@ -1161,7 +1161,7 @@
           <script>
             document.addEventListener("DOMContentLoaded", function() {
               const typewriterElement = document.getElementById("typewriter-text");
-              const phrases = ["I'm Michelle.", "I'm a Web Designer", "I'm a Digital Design Specialist"];
+              const phrases = ["I'm Michelle."];
               let currentPhraseIndex = 0;
               let currentLetterIndex = 0;
               const typingSpeed = 100; // Velocidad de escritura en milisegundos
