--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <div class="col-lg-7 col-xl-8 text-center text-lg-start">
                     <h2 class="text-7 fw-bold mb-3 text-white">I'm <span class="text-primary">Michelle Adrianzen,</span>
                     </h2>
-                    <p class="text-white-50">Experienced and versatile graphic and web designer with over 8 years of expertise, including 3+ years collaborating with international clients. I specialize in creating engaging web designs, compelling branding, and impactful digital and print media. Proficient in Adobe Creative Cloud and Figma, with working knowledge of HTML5 and CSS. Passionate about delivering high-quality, tailored design solutions that drive results. </p>
+                    <p class="text-white-50">Results-oriented professional with 10 years of experience in digital design and 4+ years specializing in e-commerce and web environments. I blend high-end visual aesthetics with technical execution in HTML, CSS, and Liquid, specializing in the Shopify ecosystem. With an extensive background in strategic digital solutions for global brands, I leverage senior design principles to deliver user-centric UI/UX and high-impact digital experiences.</p>
                   </div>
                   <div class="col-lg-5 col-xl-4">
                     <div class="ps-lg-4">
@@ -193,6 +193,10 @@
                         <li>
                           <span class="fw-bold me-2">Linkedin:</span>
                           <a href="https://www.linkedin.com/in/michelle-adrianzen/">/michelle-adrianzen</a>
+                        </li>
+                        <li>
+                          <span class="fw-bold me-2">Portfolio:</span>
+                          <a href="https://michelle-adrianzen.github.io/portfolio/">/michelle-adrianzen/portfolio</a>
                         </li>
                         <li class="border-0">
                           <span class="fw-bold me-2">From:</span>Lima, Perú
