Knowledge section edits

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <div class="container px-lg-5">
                 <div class="position-relative d-flex text-center mb-5">
                   <h2 class="text-24 text-uppercase fw-bold w-100 mb-0 text-muted opacity-1">About Me</h2>
-                  <p class="text-9 text-dark fw-bold position-absolute w-100 align-self-center lh-base mb-0 text-white"> Know Me More <span class="heading-separator-line border-bottom border-3 border-primary d-block mx-auto"></span>
+                  <p class="text-9 text-dark fw-bold position-absolute w-100 align-self-center lh-base mb-0 text-white"> Background & Expertise <span class="heading-separator-line border-bottom border-3 border-primary d-block mx-auto"></span>
                   </p>
                 </div>
                 <div class="row gy-5">
@@ -211,7 +211,7 @@
               <div class="container px-lg-5">
                 <div class="position-relative d-flex text-center mb-5">
                   <h2 class="text-24 text-uppercase fw-bold w-100 mb-0 text-white-50 opacity-1">Knowledge </h2>
-                  <p class="text-9 fw-bold position-absolute w-100 align-self-center lh-base mb-0 text-white"> What I Do <span class="heading-separator-line border-bottom border-3 border-primary d-block mx-auto"></span>
+                  <p class="text-9 fw-bold position-absolute w-100 align-self-center lh-base mb-0 text-white"> Specialized Digital Services <span class="heading-separator-line border-bottom border-3 border-primary d-block mx-auto"></span>
                   </p>
                 </div>
                 <div class="row">
@@ -222,8 +222,8 @@
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1 p-1">
                             <img src="assets/common/images/elementos-web/icons-01.png" alt="icon" class="img-fluid">
                           </div>
-                          <h3 class="text-white">Digital Media</h3>
-                          <p class="mb-0 text-white-50">I design engaging digital media content that enhances your online presence. Whether it's social media graphics, digital ads, or amazon listings,</p>
+                          <h3 class="text-white">Web Design & UI/UX</h3>
+                          <p class="mb-0 text-white-50">I design intuitive, user-centric interfaces in Figma that prioritize usability and visual flow. My approach focuses on creating seamless digital journeys that align with business goals and user needs.</p>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -231,8 +231,8 @@
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1">
                             <img src="assets/common/images/elementos-web/icons-04.png" alt="icon" class="img-fluid">
                           </div>
-                          <h3 class="text-white">Web Design</h3>
-                          <p class="mb-0 text-white-50">I specialize in creating intuitive and visually appealing websites that provide a seamless user experience that cater to your business needs.</p>
+                          <h3 class="text-white">E-commerce Development</h3>
+                          <p class="mb-0 text-white-50">I build high-converting, scalable online stores specializing in the Shopify ecosystem. From custom Liquid sections to seamless B2B/B2C logic, I ensure technical performance meets brand excellence.</p>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -240,8 +240,8 @@
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1">
                             <img src="assets/common/images/elementos-web/icons-02.png" alt="icon" class="img-fluid">
                           </div>
-                          <h3 class="text-white">Print Media</h3>
-                          <p class="mb-0 text-white-50">I compose from brochures and flyers to posters and business cards, tailored to meet your specific marketing needs.</p>
+                          <h3 class="text-white">Visual Identity & Branding</h3>
+                          <p class="mb-0 text-white-50">Leveraging over a decade of experience with global brands, I develop cohesive visual identities and design systems that ensure cross-platform consistency and a premium brand presence.</p>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -249,8 +249,8 @@
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1">
                             <img src="assets/common/images/elementos-web/icons-05.png" alt="icon" class="img-fluid">
                           </div>
-                          <h3 class="text-white">Email Design</h3>
-                          <p class="mb-0 text-white-50">I craft compelling email designs to drive engagement, promote your brand, and convert leads into customers. </p>
+                          <h3 class="text-white">Digital Strategy & Assets</h3>
+                          <p class="mb-0 text-white-50">I produce high-impact digital content designed for performance, including advanced product retouching, lifestyle compositions, and strategic web banners that elevate the brand's omnichannel presence.</p>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -258,8 +258,8 @@
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1">
                             <img src="assets/common/images/elementos-web/icons-03.png" alt="icon" class="img-fluid">
                           </div>
-                          <h3 class="text-white">Branding</h3>
-                          <p class="mb-0 text-white-50">I develop cohesive and impactful branding solutions that reflect your identity. From logos to brand guidelines and marketing materials.</p>
+                          <h3 class="text-white">Email Marketing Design</h3>
+                          <p class="mb-0 text-white-50">I craft automated and promotional email campaigns that drive engagement and conversion. I focus on creating a seamless visual transition from the inbox to the e-commerce experience.</p>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -267,8 +267,8 @@
                           <div class="featured-box-icon text-primary shadow-sm rounded bg-dark-1">
                             <img src="assets/common/images/elementos-web/icons-06.png" alt="icon" class="img-fluid">
                           </div>
-                          <h3 class="text-white">Illustration</h3>
-                          <p class="mb-0 text-white-50"> I create custom illustrations that bring your ideas to life, tailored to your specific needs and style, adding a unique and creative touch to your visuals. </p>
+                          <h3 class="text-white">Sales Enablement & Mockups</h3>
+                          <p class="mb-0 text-white-50">I specialize in creating high-stakes visual proposals and realistic digital mockups. I help sales teams and stakeholders visualize final products within premium environments and complex digital interfaces.</p>
                         </div>
                       </div>
                     </div>
